--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -478,7 +478,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="300" height="63"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder-icon" translatesAutoresizingMaskIntoConstraints="NO" id="8Qb-g8-9V1">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Qb-g8-9V1">
                                                     <rect key="frame" x="20" y="20" width="20" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="4WU-xp-KCa"/>
@@ -1521,7 +1521,6 @@ Please, check your network conneciton</string>
     <resources>
         <image name="Profile Placeholder" width="200" height="200"/>
         <image name="baseline_lock_black_36pt" width="36" height="36"/>
-        <image name="folder-icon" width="50" height="50"/>
         <image name="images-3" width="54" height="104"/>
         <image name="logo" width="309" height="92"/>
         <image name="placeholder_transparent" width="400" height="300"/>
