--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -1280,6 +1280,17 @@ Please, check your network conneciton</string>
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ks5-ra-uTI">
+                                <rect key="frame" x="47.666666666666657" y="380.66666666666669" width="280" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="leJ-uY-B9T"/>
+                                </constraints>
+                                <string key="text">Could not load the data.
+Please, check your network connection.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gJM-c3-yOB">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1333,95 +1344,6 @@ Please, check your network conneciton</string>
                                             <outlet property="contentTextLabel" destination="abT-yX-Tlo" id="icx-a4-NKq"/>
                                             <outlet property="subtitleLabel" destination="8Ol-XS-v7x" id="x6f-46-7rW"/>
                                             <outlet property="titleLabel" destination="cZG-Jd-aK8" id="jdX-cp-qun"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AcceptButtonCell" rowHeight="90" id="eQN-3X-LCQ" customClass="AcceptButtonCell" customModule="News" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="368" width="375" height="90"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eQN-3X-LCQ" id="v2o-JN-jOa">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KoO-vm-y3u">
-                                                    <rect key="frame" x="30" y="20" width="315" height="50"/>
-                                                    <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mo2-Gc-MFW">
-                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
-                                                            <color key="backgroundColor" red="0.35699999999999998" green="0.75800000000000001" blue="0.97599999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="50" id="ivD-CW-xOP"/>
-                                                            </constraints>
-                                                            <state key="normal" title="Accept">
-                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            </state>
-                                                            <userDefinedRuntimeAttributes>
-                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                                    <integer key="value" value="5"/>
-                                                                </userDefinedRuntimeAttribute>
-                                                            </userDefinedRuntimeAttributes>
-                                                            <connections>
-                                                                <action selector="acceptButtonPressed:" destination="eQN-3X-LCQ" eventType="touchUpInside" id="7nx-HL-st2"/>
-                                                            </connections>
-                                                        </button>
-                                                    </subviews>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="mo2-Gc-MFW" secondAttribute="bottom" id="2hN-1R-G5s"/>
-                                                        <constraint firstItem="mo2-Gc-MFW" firstAttribute="top" secondItem="KoO-vm-y3u" secondAttribute="top" id="SDo-kp-cz5"/>
-                                                        <constraint firstAttribute="height" constant="50" id="i2u-cX-q7K"/>
-                                                        <constraint firstItem="mo2-Gc-MFW" firstAttribute="leading" secondItem="KoO-vm-y3u" secondAttribute="leading" id="kEN-gt-0yd"/>
-                                                        <constraint firstAttribute="trailing" secondItem="mo2-Gc-MFW" secondAttribute="trailing" id="p7A-nz-4dR"/>
-                                                    </constraints>
-                                                </view>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="KoO-vm-y3u" secondAttribute="bottom" constant="20" id="7dB-ff-Vl5"/>
-                                                <constraint firstItem="KoO-vm-y3u" firstAttribute="top" secondItem="v2o-JN-jOa" secondAttribute="top" constant="20" id="bQy-Vc-O1J"/>
-                                                <constraint firstAttribute="trailing" secondItem="KoO-vm-y3u" secondAttribute="trailing" constant="30" id="e9c-kE-ein"/>
-                                                <constraint firstItem="KoO-vm-y3u" firstAttribute="leading" secondItem="v2o-JN-jOa" secondAttribute="leading" constant="30" id="mxU-Jd-Es0"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="acceptButton" destination="mo2-Gc-MFW" id="rP0-Tx-vzT"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReloadButtonCell" rowHeight="188" id="DGn-Wx-6Jk" customClass="ReloadButtonCell" customModule="News" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="458" width="375" height="188"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DGn-Wx-6Jk" id="mfT-jZ-MFm">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Could not load the page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9c-AF-vsK">
-                                                    <rect key="frame" x="95.666666666666686" y="100" width="184" height="13"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.78400000000000003" green="0.78400000000000003" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ePh-ZV-rQL">
-                                                    <rect key="frame" x="141.66666666666666" y="123" width="92" height="45"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="45" id="kqO-DF-I4h"/>
-                                                    </constraints>
-                                                    <state key="normal" title="reload button">
-                                                        <color key="titleColor" red="0.78400000000000003" green="0.78400000000000003" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="reloadButtonPressed:" destination="DGn-Wx-6Jk" eventType="touchUpInside" id="iZC-Jl-wI5"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="P9c-AF-vsK" firstAttribute="top" secondItem="mfT-jZ-MFm" secondAttribute="top" constant="100" id="8RC-wq-07Z"/>
-                                                <constraint firstItem="P9c-AF-vsK" firstAttribute="centerX" secondItem="mfT-jZ-MFm" secondAttribute="centerX" id="DNQ-Pe-HOm"/>
-                                                <constraint firstItem="ePh-ZV-rQL" firstAttribute="centerX" secondItem="mfT-jZ-MFm" secondAttribute="centerX" id="GNe-69-IKg"/>
-                                                <constraint firstAttribute="bottom" secondItem="ePh-ZV-rQL" secondAttribute="bottom" constant="20" id="IFa-ff-HI8"/>
-                                                <constraint firstItem="ePh-ZV-rQL" firstAttribute="top" secondItem="P9c-AF-vsK" secondAttribute="bottom" constant="10" id="MO3-V7-kKS"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="reloadButton" destination="ePh-ZV-rQL" id="gQq-ek-Ggg"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1486,16 +1408,19 @@ Please, check your network conneciton</string>
                             <constraint firstItem="q2q-O6-760" firstAttribute="top" secondItem="8fA-S5-VGP" secondAttribute="top" id="Rc5-Ft-VdF"/>
                             <constraint firstAttribute="trailing" secondItem="5sd-sg-Cj7" secondAttribute="trailing" id="S9c-3c-ILW"/>
                             <constraint firstItem="5sd-sg-Cj7" firstAttribute="bottom" secondItem="q2q-O6-760" secondAttribute="bottom" id="ax5-re-dN8"/>
+                            <constraint firstItem="Ks5-ra-uTI" firstAttribute="centerX" secondItem="mFt-bh-0nO" secondAttribute="centerX" id="ev1-Xq-vd5"/>
                             <constraint firstItem="gJM-c3-yOB" firstAttribute="trailing" secondItem="mFt-bh-0nO" secondAttribute="trailing" id="fqF-eE-GBY"/>
                             <constraint firstItem="gJM-c3-yOB" firstAttribute="top" secondItem="8fA-S5-VGP" secondAttribute="top" id="hxO-fl-GIR"/>
                             <constraint firstAttribute="trailing" secondItem="zKr-en-hx1" secondAttribute="trailing" id="pLp-qb-AZs"/>
                             <constraint firstItem="q2q-O6-760" firstAttribute="leading" secondItem="mFt-bh-0nO" secondAttribute="leading" id="q5t-iS-e8L"/>
+                            <constraint firstItem="Ks5-ra-uTI" firstAttribute="centerY" secondItem="mFt-bh-0nO" secondAttribute="centerY" id="qkd-GD-Dkx"/>
                             <constraint firstItem="zKr-en-hx1" firstAttribute="leading" secondItem="mFt-bh-0nO" secondAttribute="leading" id="uw3-Hz-6dz"/>
                             <constraint firstAttribute="bottom" secondItem="gJM-c3-yOB" secondAttribute="bottom" id="vMQ-PJ-ahk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mFt-bh-0nO"/>
                     </view>
                     <connections>
+                        <outlet property="errorLabel" destination="Ks5-ra-uTI" id="ChN-m1-lun"/>
                         <outlet property="logoImageView" destination="A9d-bU-wkV" id="Gea-bt-zPV"/>
                         <outlet property="navigationBackButton" destination="atg-qt-WKr" id="ikh-7K-7JM"/>
                         <outlet property="navigationBarBlurColorView" destination="5sd-sg-Cj7" id="Lyj-bf-4By"/>
